@@ -6,6 +6,12 @@
           1         2         3         4         5         6         7
 01234567890123456789012345678901234567890123456789012345678901234567890123456789
 -----------------+-----------+--------------------------------------------------
+
+TB-2009-10-15-0: Enhancem.:  error logging to STDOUT now contains complete
+                             stacktrace
+                 Cleanup:    Hedeby test cli/comp_lifecycle/jvms, error handling
+                 Review:     RH
+
 LP-2009-10-14-1: Bugfix:     Upgrading from pre-1.18 version does not work
                  Review:     JO
 
